--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		  	<p>Length</p>
 		  	<p>Elevation</p>
 		  	<p>Nearest City</p>
-		  	<p><a class="btn btn-primary btn-lg">+</a></p>
+		  	<a class="btn btn-success btn-lg">+</a>
 		</div>
 
 	    <div class="jumbotron">
@@ -51,7 +51,7 @@
 		  	<p>Length</p>
 		  	<p>Elevation</p>
 		  	<p>Nearest City</p>
-		  	<p><a class="btn btn-primary btn-lg">+</a></p>
+		  	<a class="btn btn-success btn-lg">+</a>
 		</div>
 
 	    <div class="jumbotron">
@@ -59,7 +59,7 @@
 		  	<p>Length</p>
 		  	<p>Elevation</p>
 		  	<p>Nearest City</p>
-		  	<p><a class="btn btn-primary btn-lg">+</a></p>
+		  	<a class="btn btn-success btn-lg">+</a>
 		</div>
 	</div>
 
