just a couple more hours and this should be working

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<form class="navbar-form navbar-left" role="search">
 
         <div class="form-group">
-        	<input type="text" class="form-control" placeholder="Enter the name of a city, or zipcode">
+        	<input type="text" class="form-control" ID="input" placeholder="Enter the name of your city and state, or a zipcode">
         </div>
 
     </form>
