include searchbar submit event which returns trail objects given search criteria

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<form class="navbar-form navbar-left" role="search">
         
         <div class="form-group">
-        	<input type="text" class="form-control" placeholder="Enter the name of a city, or zipcode">
+        	<input type="text" class="form-control" placeholder="Enter the name of a city, and state. For example: 'Portland, OR' " id="searchbar">
         </div>
        
     </form>
@@ -67,6 +67,9 @@
 
 	<footer>App designed by students of Portland Code School 2015. Built using Bootstrap & Bootswatch. Data pulled from trailapi.com.</footer>
 
+
+	<!-- MORE SCRIPTS -->
+	<script type="text/javascript" src="js/search.js"></script>
 </body>
 
 </html>
