--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<!-- <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/simplex/bootstrap.min.css" rel="stylesheet" integrity="sha256-4nVETqQoIoCwuephcXpJ501G8B5sgBHb1ZsKU/D476I= sha512-cfSmkkLRDAcUNaJxRRWopCyEGX43UkWCAOl2wErYMBGOQVWwOsZ7IFuXScF9H/6nMGbmsgV4m5/xYfesyvHTxw==" crossorigin="anonymous"> -->
@@ -31,36 +31,44 @@
 
         <div class="form-group">
 
-        	<input type="text" class="form-control" placeholder="Enter the name of a city, and state. For example: 'Portland, OR' " id="searchbar">
+        	<input type="text" class="form-control" placeholder="Enter the name of a city, and state. For example: 'Portland, OR' " id="searchbar" onsubmit="myFunction()">
 
         </div>
 
     </form>
 
 	<div class="results">
-	    <h2>How great are these hikes, eh?</h2>
+	    <h2>How great are these hikes, eh? </h2>
 
-	    <div class="jumbotron">
-			<h1>Trail name</h1>
-		  	<p>Length</p>
-		  	<p>Elevation</p>
-		  	<p>Nearest City</p>
+	    <div class="jumbotron" id = "img1">
+
+				<iframe id ="iframe0" class="map-top" width="300" height="200" align="right" align="middle" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyD4iE2xVSpkLLOXoyqT-RuPwURN3ddScAI&amp;center=-33.8569,151.2152&amp;zoom=18&amp;maptype=satellite" allowfullscreen=""></iframe>
+
+				<h1 id = 'trail0'>Trail Name</h1>
+		  	<p id = 'length0'>Length</p>
+		  	<p id = 'city0'>Nearest City</p>
 		  	<a class="btn btn-success btn-lg">+</a>
 		</div>
 
-	    <div class="jumbotron">
-			<h1>Trail name</h1>
-		  	<p>Length</p>
-		  	<p>Elevation</p>
-		  	<p>Nearest City</p>
-		  	<a class="btn btn-success btn-lg">+</a>
+	    <div class="jumbotron" id = "img2">
+
+				<iframe id = "iframe1" class="map-top" width="300" height="200" align="right" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyD4iE2xVSpkLLOXoyqT-RuPwURN3ddScAI
+					&amp;center=-33.8569,151.2152&amp;zoom=18&amp;maptype=satellite" allowfullscreen=""></iframe>
+
+			<h1 id = 'trail1'>Trail name</h1>
+		  	<p id = 'length1'>Length</p>
+		  	<p id = 'city1'>Nearest City</p>
+					<div id="map-canvas"></div>
 		</div>
 
-	    <div class="jumbotron">
-			<h1>Trail name</h1>
-		  	<p>Length</p>
-		  	<p>Elevation</p>
-		  	<p>Nearest City</p>
+	    <div class="jumbotron" id = "img3">
+
+				<iframe id = "iframe2" class="map-top" width="300" height="200" align="right" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyD4iE2xVSpkLLOXoyqT-RuPwURN3ddScAI
+					&amp;center=-33.8569,151.2152&amp;zoom=18&amp;maptype=satellite" allowfullscreen=""></iframe>
+
+			<h1 id = 'trail2'>Trail name</h1>
+		  	<p id = 'length2'>Length</p>
+		  	<p id = 'city2'>Nearest City</p>
 		  	<a class="btn btn-success btn-lg">+</a>
 		</div>
 	</div>
@@ -72,6 +80,8 @@
 
 	<!-- MORE SCRIPTS -->
 	<script type="text/javascript" src="js/search.js"></script>
+	<!-- For reverse Geocoding -->
+	</script>
 </body>
 
 </html>
